# numerical_optimization

./: CMakeLists.txt  README.md
apps/work0/: CMakeLists.txt  main.cc
apps/work1/: CMakeLists.txt  main.cc  minimization.cc  minimization.h
cmake/: eigen3.cmake  opencv.cmake
docs/: work0.md
scripts/: build.sh
